Create the edit and delete Page

--- a/MoviesStore/MoviesStore/Pages/Shared/_Layout.cshtml
+++ b/MoviesStore/MoviesStore/Pages/Shared/_Layout.cshtml
@@ -37,11 +37,13 @@
             @RenderBody()
         </main>
     </div>
-
+   
     <footer class="border-top footer text-muted">
         <div class="container">
             &copy; 2022 - MoviesStore - <a asp-area="" asp-page="/Privacy">Privacy</a>
         </div>
+        @RenderSection("mohamed", required: false)
+        
     </footer>
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
