--- a/MoviesStore/MoviesStore/Pages/Movies/List.cshtml
+++ b/MoviesStore/MoviesStore/Pages/Movies/List.cshtml
@@ -4,22 +4,24 @@
 }
 
 <div class="row">
-    <div class="col-sm-12">
-        <h1> Movies </h1>
+    <div class="col-sm-6">
+        <a href="./Create" class="btn btn-light">Add New Movie</a>
+    </div>
+    <div class="col-sm-6">
+        <form method="post">
+            <div class="input-group">
+                <input type="search" name="Name" class="form-control rounded" placeholder="Search"
+                       aria-label="Search" aria-describedby="search-addon" />
+                <button type="submit" class="btn btn-outline-primary">search</button>
+            </div>
+        </form>
     </div>
 </div>
 <div class="row justify-content-center">
     @foreach (var Movie in Model.Movies)
     {
-    <div class="card" style="width: 18rem; margin: 20px">
-        <img class="card-img-top" src="~/images/download.svg" alt="Card image cap"/>
-        <div class="card-body">
-            <h5 class="card-title"> @Movie.Name </h5>
-            <p class="card-text"> @Movie.Genre </p>
-            <div>
-                <a href="#" class="btn btn-primary">Show Details</a>
-            </div>    
-        </div>
-    </div>
+        <partial name="_MovieData"  model="Movie"/>
     }
 </div>
+
+
