--- a/MoviesStore/MoviesStore/Pages/_ViewImports.cshtml
+++ b/MoviesStore/MoviesStore/Pages/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 @using MoviesStore
+@using MovieStore.Core
 @namespace MoviesStore.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, MoviesStore
