style the list view and add real data using entity framework

--- a/Pie2Shop/Pie2Shop/Views/Shared/_Layout.cshtml
+++ b/Pie2Shop/Pie2Shop/Views/Shared/_Layout.cshtml
@@ -4,10 +4,24 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>Pathany's Pie Shop</title>
+    <link href="https://fonts.googleapis.com/css2?family=Source+Serif+Pro:ital,wght@1,600&display=swap" rel="stylesheet">
+    <link href="~/lib/bootstrap/css/bootstrap.css" rel="stylesheet" />
+    <script src="~/lib/jquery/jquery.js"></script>
+    <script src="~/lib/bootstrap/js/bootstrap.js"></script>
+    <link href="~/Content/Site.css" rel="stylesheet" />
 </head>
 <body>
-    <div>
-        @RenderBody()
+    <div class="container">
+        <div class="row">
+            <div class="col-md-3">
+                <p class="lead">
+                    <img class="img-fluid" src="~/Images/bethanylogo.png" alt="Bethany's Pie Shop" />
+                </p>
+            </div>
+            <div class="col-md-9">
+                @RenderBody()
+            </div>
+        </div>
     </div>
 </body>
 </html>
