--- a/Pie2Shop/Pie2Shop/Views/Pie/List.cshtml
+++ b/Pie2Shop/Pie2Shop/Views/Pie/List.cshtml
@@ -2,13 +2,30 @@
 
 
 
+<div class="row">
+    <h1>@Model.CurrentCategory</h1>
+    @foreach (var pie in Model.Pies)
+    {
+        <div class="col-sm-4 col-md-4 col-lg-4">
+            <div class="thumbnail">
+                <img src="@pie.ImageThumbnailUrl" alt="Alternate Text" />
+                <div class="caption">
+                    <div>
+                        <h3>
+                            <a> @pie.Name </a>
+                        </h3>
+                    </div>
+                    <div>
+                        <h3 class="float-start">
+                            @pie.Price.ToString("c")
+                        </h3>
+                    </div>
+                    <p> @pie.ShortDescription </p>
+                </div>
+            </div>
+        </div>
+    }
+
+</div>
 
 
-
-<h1>@Model.CurrentCategory</h1>
-@foreach (var pie in Model.Pies)
-{
-    <h2> @pie.Name </h2>
-    <h3> @pie.Price </h3>
-    <h4> @pie.Category.Name</h4>
-}
