--- a/Pie2Shop/Pie2Shop/wwwroot/Content/Site.css
+++ b/Pie2Shop/Pie2Shop/wwwroot/Content/Site.css
@@ -35,9 +35,9 @@ body {
     overflow: hidden;
 }
 
-    .caption h4 {
-        white-space: nowrap;
-    }
+.caption h4 {
+    white-space: nowrap;
+}
 
 .thumbnail img {
     width: 100%;
@@ -49,13 +49,14 @@ body {
 }
 
 .thumbnail {
-    padding: 0;
+    padding: 10px;
 }
 
-    .thumbnail .caption-full {
-        padding: 9px;
-        color: #333;
-    }
+.thumbnail .caption-full {
+    padding: 9px;
+    color: #333;
+    background-color: #ffffff !important;
+}
 
 footer {
     margin: 50px 0;
