--- a/Pie2Shop/Pie2Shop/Views/Pie/List.cshtml
+++ b/Pie2Shop/Pie2Shop/Views/Pie/List.cshtml
@@ -14,7 +14,7 @@
                         @pie.Price.ToString("c")
                     </h3>
                     <h3>
-                        <a asp-controller="Pie" asp-action="Details" asp-route-id="@pie.PieId"> @pie.Name </a>
+                        <a asp-controller="Pie" asp-action="Details" asp-route-id="@pie.PieId" style="text-decoration: none"> @pie.Name </a>
                     </h3>
                     <p> @pie.ShortDescription </p>
                 </div>
