--- a/Pie2Shop/Pie2Shop/wwwroot/Content/Site.css
+++ b/Pie2Shop/Pie2Shop/wwwroot/Content/Site.css
@@ -10,12 +10,15 @@
     src: url('sourcesanspro-regular.ttf') format('truetype');
 }*/
 body {
-    padding-top: 70px; /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
+    padding-top: 0px; /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
     background-image: url('/images/pattern.png');
     background-repeat: repeat;
     font-family: 'Source Sans Pro', sans-serif;
 }
 
+.container {
+    padding-top: 100px;
+}
 
 .slide-image {
     width: 100%;
@@ -64,6 +67,8 @@ footer {
 
 .navbar {
     background-image: none;
+    color: white;
+    font-size: 1.2em;
 }
 
 .navbar-inverse {
@@ -78,6 +83,12 @@ footer {
 
 .navbar .nav > li > a {
     font-size: 1.2em;
+    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+    color: white;
+}
+
+ .SetColor {
+    font-size: 1em;
     text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
     color: white;
 }
