--- a/Pie2Shop/Pie2Shop/Views/Pie/List.cshtml
+++ b/Pie2Shop/Pie2Shop/Views/Pie/List.cshtml
@@ -6,22 +6,8 @@
     <h1>@Model.CurrentCategory</h1>
     @foreach (var pie in Model.Pies)
     {
-        <div class="col-sm-4 col-md-4 col-lg-4">
-            <div class="thumbnail">
-                <img src="@pie.ImageThumbnailUrl" alt="Alternate Text" />
-                <div class="caption caption-full">
-                    <h3 class="float-end">
-                        @pie.Price.ToString("c")
-                    </h3>
-                    <h3>
-                        <a asp-controller="Pie" asp-action="Details" asp-route-id="@pie.PieId" style="text-decoration: none"> @pie.Name </a>
-                    </h3>
-                    <p> @pie.ShortDescription </p>
-                </div>
-            </div>
-        </div>
+        <partial  name="_PieData" model="@pie"/>
     }
-
 </div>
 
 
