--- a/Pie2Shop/Pie2Shop/wwwroot/Content/Site.css
+++ b/Pie2Shop/Pie2Shop/wwwroot/Content/Site.css
@@ -20,8 +20,14 @@ body {
     padding-top: 100px;
 }
 
+.row {
+    margin-bottom: 30px;
+}
+
 .slide-image {
     width: 100%;
+    height: 400px;
+    border-radius: 4px;
 }
 
 .carousel-holder {
@@ -44,6 +50,11 @@ body {
 
 .thumbnail img {
     width: 100%;
+}
+
+.btn-outline-primary {
+    color: #f9f9f9;
+    border-color: #0d6efd;
 }
 
 .addToCart {
@@ -94,6 +105,10 @@ footer {
 }
 
 .carousel .item {
+    height: 400px;
+}
+
+#carouselExampleControls {
     height: 400px;
 }
 
