--- a/Pie2Shop/Pie2Shop/Views/_ViewImports.cshtml
+++ b/Pie2Shop/Pie2Shop/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using Pie2Shop.ViewModels
 @using Pie2Shop.Models
-@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers 
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper Pie2Shop.TagHelpers.*, Pie2Shop 
